# PlutusInvestmentGroup

./: .env.example  .gitignore  README.md  capacitor.config.ts  dashboard.config.js  deal.html  deals.js  index.html  main.html  mkdocs.yml  package-lock.json  package.json  person.html  tasks.html  tasks.js
.github/workflows/: mac-app-store-release.yml  mac-release.yml  publish.yml  windows-release.yml
android/app/: build.gradle
app/: index.html
app/data/: config.json  sharedrive-tasks.json
app/pages/: accounting.html  days-off.html  deal-details.html  deal-negotiations.html  deal-ownership.html  deals-overview.html  legal-management.html  (+5 more)
ci_scripts/: ci_post_clone.sh  ci_pre_xcodebuild.sh
config/: project-paths.cjs
data/: config.js  sharedrive-tasks.js
docs/: getting-started.md  index.md
electron/: after-pack.cjs  main.cjs  preload.cjs
electron-builder-resources/: icon.icns
public/: deal-details.html  deal.html  deals-overview.html  index.html  investor-dashboard.html  main.html  owner-tasks.html  person.html  sharedrive-folders.html  tasks-management.html  tasks.html
scripts/: generate-config.js  generate-dashboard-config.js  prepare-web-assets.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
styles/: common.css  components.css  deal.css  pages.css  sharedrive-folders.css  tasks.css
tools/: debug-sharedrive-json.cjs  fix-ios-spm-paths.cjs  generate-brand-icons.py  generate-config.js  generate_navro_standalone.py  patch-ios-podfile.cjs  prepare-web-assets.cjs  set-mac-notary-github-secrets.sh
(+101 files in other folders)
